Fix input border curve on IOS

--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,8 @@ a {
 }
 input {
 	background-color: transparent;
-    border: none;
+	border: none;
+    border-radius: 0;
 }
 .container {
 	margin-right: auto;
